<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg7"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txtTitle"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="#000000"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    app:boxStrokeColor="#0FFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ipName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textColor="#181FDC"
                        android:textColorHint="#181FDC" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    app:boxStrokeColor="#0FFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ipPax"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/num_of_pax"
                        android:inputType="number|numberSigned"
                        android:textColor="#181FDC"
                        android:textColorHint="#181FDC" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ipMobile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/mobile_number"
                        android:inputType="number|numberSigned"
                        android:maxLength="8" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cbSmoking"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.3"
                    android:text="@string/smoking" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/tbDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textOff="@string/default_date"
                    android:textOn="@string/change_date" />

                <DatePicker
                    android:id="@+id/dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/tbTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textOff="@string/default_time"
                    android:textOn="@string/change_time" />

                <TimePicker
                    android:id="@+id/tp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnReserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reserve" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtDisplayData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:gravity="center"
                android:textColor="#CA0F0F"
                android:textSize="21sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>